k8s/aut-sys/apps/firefly/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    haproxy-ingress.github.io/auth-url: "https://auth.aut-sys.de/outpost.goauthentik.io/auth/caddy"
    haproxy-ingress.github.io/proxy-body-size: "100k"
spec:
  ingressClassName: haproxy
  tls:
    - hosts: [ firefly.aut-sys.de, firefly-import.aut-sys.de ]
      secretName: tls-firefly.aut-sys.de
  rules:
  - host: firefly.aut-sys.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firefly-webserver
            port:
              name: http
  - host: firefly-import.aut-sys.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firefly-data-importer
            port:
              name: http
